--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="title_activity_pre_main">preMain</string>
     <string name="title_activity_facebook_login">FacebookLogin</string>
     <string name="facebook_app_id">1088228601233560</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
